Fix to get file names, not paths
Also clarify that it is just the active tab, not other ones

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
 		"commands": [
 			{
 				"command": "tab-context-menu-enhancer.copy-file-name",
-				"title": "Copy File Name"
+				"title": "Copy Active File Name"
 			}
 		],
 		"menus": {
